[package]
name = "rocket-translate"
version = "0.1.0"
edition = "2021"
authors = ["rumbleFTW, <rajdeep.ghosh.1337@gmail.com>"]

[dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0"
features = ["json"]
